# trees

./: .gitignore  LICENSE  build.gradle  settings.gradle
PclProcessing/: CMakeLists.txt  Capture_Sample_24_21  README.txt  iterative_closest_point.cpp  pcd_write.cpp  visualize_range_image.cpp
trees/app/: CMakeLists.txt  build.gradle  local.properties  secure.properties
trees/app/gradle/wrapper/: gradle-wrapper.properties
trees/app/src/debug/res/values/: google_maps_api.xml
trees/app/src/main/: AndroidManifest.xml
trees/app/src/main/cpp/: image_processor.cpp
trees/app/src/main/java/com/google/ar/core/examples/java/common/helpers/: CameraPermissionHelper.java  DisplayRotationHelper.java  LocationPermissionHelper.java  (+1 more)
trees/app/src/main/java/com/google/ar/core/examples/java/sharedcamera/: ImagePreviewActivity.java  ImageUtil.java  MapsActivity.java  SharedCameraActivity.java
trees/app/src/main/java/com/huawei/arengine/demos/java/world/rendering/: RenderUtil.java
trees/app/src/main/java/com/trees/activities/: CaptureConfirmationFragment.java  ImageCaptureActivity.java  ImagePreviewActivity.java  MapsActivity.java  SharedCameraActivity.java
trees/app/src/main/java/com/trees/common/helpers/: CameraPermissionHelper.java  DisplayRotationHelper.java  ImageStore.java  ImageStoreHelper.java  ImageStoreInterface.java  ImageUtil.java  LocationPermissionHelper.java  StoragePermissionHelper.java  TofBuffers.java  TofUtil.java
trees/app/src/main/java/com/trees/common/jni/: FakeImageProcessor.java  ImageProcessor.java  ImageProcessorInterface.java  JavaImageProcessor.java
trees/app/src/main/java/com/trees/common/pyi/: FakeImageProcessor.java  ImageProcessor.java  ImageProcessorInterface.java
trees/app/src/main/java/com/trees/common/rendering/: BackgroundRenderer.java  DrawingView.java  OcclusionRenderer.java  ShaderUtil.java
trees/app/src/main/java/com/trees/model/: ImageViewModel.java  ImageViewModelFactory.java  ImageViewModelFactory.kt
trees/app/src/main/java/com/trees/sharedcamera/: ImagePreviewActivity.java  ImageUtil.java  MapsActivity.java  SharedCameraActivity.java
trees/app/src/main/python/: improc.py  model.py  processor.py
trees/app/src/main/res/drawable/: toast_background.xml
trees/app/src/main/res/layout/: activity_image_preview.xml  activity_main.xml  activity_maps.xml  capture_confirmation_fragment_view.xml
trees/app/src/main/res/values/: strings.xml  styles.xml
(+149 files in other folders)
